<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="app_name">Pokemon</string>
    <string name="dbinspector_app_name">Pokemon db</string>
    <string name="error_network_problem" formatted="false">There was a network problem.</string>
    <string name="error_login_failed" formatted="false">Login failed.</string>
    <string name="error_unknown_problem" formatted="false">Unknown error occurred</string>
    <string name="low_budget_error_message" formatted="false">You don\'t have the budget to do this.</string>
    <string name="error_login_unavailable" formatted="false">Login currently unavailable.</string>
    <string name="hp">HP</string>
    <string name="weight">Weight</string>
    <string name="height">Height</string>
    <string name="attack">Attack</string>
    <string name="defense">Defense</string>
    <string name="list_fetched_from">"Pokemon list fetched from %1$s"</string>

</resources>
